@@ -7,21 +7,24 @@
 
 package net.codecrete.usb.linux;
 
-import net.codecrete.usb.*;
+import net.codecrete.usb.USBControlTransfer;
+import net.codecrete.usb.USBDirection;
+import net.codecrete.usb.USBException;
+import net.codecrete.usb.USBTransferType;
+import net.codecrete.usb.common.Transfer;
 import net.codecrete.usb.common.USBDeviceImpl;
 import net.codecrete.usb.common.USBInterfaceImpl;
-import net.codecrete.usb.linux.gen.errno.errno;
 import net.codecrete.usb.linux.gen.fcntl.fcntl;
-import net.codecrete.usb.linux.gen.ioctl.ioctl;
 import net.codecrete.usb.linux.gen.unistd.unistd;
-import net.codecrete.usb.linux.gen.usbdevice_fs.usbdevfs_bulktransfer;
-import net.codecrete.usb.linux.gen.usbdevice_fs.usbdevfs_ctrltransfer;
 import net.codecrete.usb.linux.gen.usbdevice_fs.usbdevfs_setinterface;
 import net.codecrete.usb.usbstandard.DeviceDescriptor;
+import net.codecrete.usb.usbstandard.SetupPacket;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -34,8 +37,11 @@ public class LinuxUSBDevice extends USBDeviceImpl {
 
     private int fd = -1;
 
+    private final LinuxAsyncTask asyncTask;
+
     LinuxUSBDevice(Object id, int vendorId, int productId) {
         super(id, vendorId, productId);
+        asyncTask = LinuxAsyncTask.instance();
         loadDescription((String) id);
     }
 
@@ -49,21 +55,9 @@ public class LinuxUSBDevice extends USBDeviceImpl {
 
         // `descriptors` contains the device descriptor followed by the configuration descriptor
         // (including the interface descriptors, endpoint descriptors etc.)
-
-        try (var session = MemorySession.openConfined()) {
-            var descriptorsSegment = MemorySegment.ofArray(descriptors);
-
-            // split off device descriptor (and copy it to fix alignment issues)
-            var deviceDesc = session.allocate(DeviceDescriptor.LAYOUT);
-            deviceDesc.copyFrom(descriptorsSegment.asSlice(0, DeviceDescriptor.LAYOUT.byteSize()));
-
-            setFromDeviceDescriptor(deviceDesc);
-
-            // skip to configuration descriptor
-            var configDesc = session.allocateArray(JAVA_BYTE, descriptors.length - 18);
-            configDesc.copyFrom(descriptorsSegment.asSlice(DeviceDescriptor.LAYOUT.byteSize()));
-            setConfigurationDescriptor(configDesc);
-        }
+        var descriptorsSegment = MemorySegment.ofArray(descriptors);
+        setFromDeviceDescriptor(descriptorsSegment);
+        setConfigurationDescriptor(descriptorsSegment.asSlice(DeviceDescriptor.LAYOUT.byteSize()));
     }
 
     @Override
@@ -72,22 +66,26 @@ public class LinuxUSBDevice extends USBDeviceImpl {
     }
 
     @Override
-    public void open() {
+    public synchronized void open() {
         if (isOpen())
             throwException("the device is already open");
 
-        try (var session = MemorySession.openConfined()) {
-            var pathUtf8 = session.allocateUtf8String(id_.toString());
-            fd = fcntl.open(pathUtf8, fcntl.O_RDWR() | fcntl.O_CLOEXEC());
+        try (var arena = Arena.openConfined()) {
+            var pathUtf8 = arena.allocateUtf8String(id_.toString());
+            var errnoState = arena.allocate(Linux.ERRNO_STATE.layout());
+            fd = IO.open(pathUtf8, fcntl.O_RDWR() | fcntl.O_CLOEXEC(), errnoState);
             if (fd == -1)
-                throwLastError("Cannot open USB device");
+                throwLastError(errnoState, "Cannot open USB device");
+            asyncTask.addForAsyncIOCompletion(this);
         }
     }
 
     @Override
-    public void close() {
+    public synchronized void close() {
         if (!isOpen())
             return;
+
+        asyncTask.removeFromAsyncIOCompletion(this);
 
         for (var intf : interfaces_)
             ((USBInterfaceImpl) intf).setClaimed(false);
@@ -96,7 +94,11 @@ public class LinuxUSBDevice extends USBDeviceImpl {
         fd = -1;
     }
 
-    public void claimInterface(int interfaceNumber) {
+    int fileDescriptor() {
+        return fd;
+    }
+
+    public synchronized void claimInterface(int interfaceNumber) {
         checkIsOpen();
 
         var intf = getInterface(interfaceNumber);
@@ -105,17 +107,18 @@ public class LinuxUSBDevice extends USBDeviceImpl {
         if (intf.isClaimed())
             throwException("Interface %d has already been claimed", interfaceNumber);
 
-        try (var session = MemorySession.openConfined()) {
-            var intfNumSegment = session.allocate(JAVA_INT, interfaceNumber);
-            int ret = ioctl.ioctl(fd, USBDevFS.CLAIMINTERFACE, intfNumSegment.address());
+        try (var arena = Arena.openConfined()) {
+            var intfNumSegment = arena.allocate(JAVA_INT, interfaceNumber);
+            var errnoState = arena.allocate(Linux.ERRNO_STATE.layout());
+            int ret = IO.ioctl(fd, USBDevFS.CLAIMINTERFACE, intfNumSegment, errnoState);
             if (ret != 0)
-                throwLastError("Cannot claim USB interface");
+                throwLastError(errnoState, "Cannot claim USB interface");
             setClaimed(interfaceNumber, true);
         }
     }
 
     @Override
-    public void selectAlternateSetting(int interfaceNumber, int alternateNumber) {
+    public synchronized void selectAlternateSetting(int interfaceNumber, int alternateNumber) {
         checkIsOpen();
 
         var intf = getInterface(interfaceNumber);
@@ -127,21 +130,23 @@ public class LinuxUSBDevice extends USBDeviceImpl {
         // check alternate setting
         var altSetting = intf.getAlternate(alternateNumber);
         if (altSetting == null)
-            throwException("Interface %d does not have an alternate interface setting %d", interfaceNumber, alternateNumber);
+            throwException("Interface %d does not have an alternate interface setting %d", interfaceNumber,
+                    alternateNumber);
 
-        try (var session = MemorySession.openConfined()) {
-            var setIntfSegment = session.allocate(usbdevfs_setinterface.$LAYOUT());
+        try (var arena = Arena.openConfined()) {
+            var setIntfSegment = arena.allocate(usbdevfs_setinterface.$LAYOUT());
             usbdevfs_setinterface.interface_$set(setIntfSegment, interfaceNumber);
             usbdevfs_setinterface.altsetting$set(setIntfSegment, alternateNumber);
-            int ret = ioctl.ioctl(fd, USBDevFS.SETINTERFACE, setIntfSegment.address());
+            var errnoState = arena.allocate(Linux.ERRNO_STATE.layout());
+            int ret = IO.ioctl(fd, USBDevFS.SETINTERFACE, setIntfSegment, errnoState);
             if (ret != 0)
-                throwLastError("Failed to set alternate interface");
+                throwLastError(errnoState, "Failed to set alternate interface");
         }
 
         intf.setAlternate(altSetting);
     }
 
-    public void releaseInterface(int interfaceNumber) {
+    public synchronized void releaseInterface(int interfaceNumber) {
         checkIsOpen();
 
         var intf = getInterface(interfaceNumber);
@@ -150,126 +155,167 @@ public class LinuxUSBDevice extends USBDeviceImpl {
         if (!intf.isClaimed())
             throwException("Interface %d has not been claimed", interfaceNumber);
 
-        try (var session = MemorySession.openConfined()) {
-            var intfNumSegment = session.allocate(JAVA_INT, interfaceNumber);
-            int ret = ioctl.ioctl(fd, USBDevFS.RELEASEINTERFACE, intfNumSegment.address());
+        try (var arena = Arena.openConfined()) {
+            var intfNumSegment = arena.allocate(JAVA_INT, interfaceNumber);
+            var errnoState = arena.allocate(Linux.ERRNO_STATE.layout());
+            int ret = IO.ioctl(fd, USBDevFS.RELEASEINTERFACE, intfNumSegment, errnoState);
             if (ret != 0)
-                throwLastError("Cannot release USB interface");
+                throwLastError(errnoState, "Cannot release USB interface");
             setClaimed(interfaceNumber, false);
-        }
-    }
-
-    private MemorySegment createCtrlTransfer(MemorySession session, USBDirection direction, USBControlTransfer setup,
-                                             MemorySegment data) {
-        var ctrlTransfer = session.allocate(usbdevfs_ctrltransfer.$LAYOUT());
-        var bmRequest =
-                (direction == USBDirection.IN ? 0x80 : 0) | (setup.requestType().ordinal() << 5) | setup.recipient().ordinal();
-        usbdevfs_ctrltransfer.bRequestType$set(ctrlTransfer, (byte) bmRequest);
-        usbdevfs_ctrltransfer.bRequest$set(ctrlTransfer, (byte) setup.request());
-        usbdevfs_ctrltransfer.wValue$set(ctrlTransfer, (short) setup.value());
-        usbdevfs_ctrltransfer.wIndex$set(ctrlTransfer, (short) setup.index());
-        usbdevfs_ctrltransfer.wLength$set(ctrlTransfer, (short) data.byteSize());
-        usbdevfs_ctrltransfer.data$set(ctrlTransfer, data.address());
-        return ctrlTransfer;
-    }
-
-    @Override
-    public byte[] controlTransferIn(USBControlTransfer setup, int length) {
-        try (var session = MemorySession.openConfined()) {
-            var data = session.allocate(length);
-            var ctrlTransfer = createCtrlTransfer(session, USBDirection.IN, setup, data);
-
-            int res = ioctl.ioctl(fd, USBDevFS.CONTROL, ctrlTransfer.address());
-            if (res < 0)
-                throwLastError("Control IN transfer failed");
-
-            return data.asSlice(0, res).toArray(JAVA_BYTE);
         }
     }
 
     @Override
     public void controlTransferOut(USBControlTransfer setup, byte[] data) {
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             int dataLength = data != null ? data.length : 0;
-            var buffer = session.allocate(dataLength);
+            var transfer = createSyncCtrlTransfer(arena, USBDirection.OUT, setup, dataLength);
             if (dataLength != 0)
-                buffer.copyFrom(MemorySegment.ofArray(data));
-            var ctrlTransfer = createCtrlTransfer(session, USBDirection.OUT, setup, buffer);
+                transfer.data.asSlice(8).copyFrom(MemorySegment.ofArray(data));
 
-            int res = ioctl.ioctl(fd, USBDevFS.CONTROL, ctrlTransfer.address());
-            if (res < 0)
-                throwLastError("Control OUT transfer failed");
+            synchronized (transfer) {
+                submitTransfer(USBDirection.OUT, 0, transfer);
+                waitForTransfer(transfer, 0, USBDirection.OUT, 0);
+            }
         }
     }
 
-    private MemorySegment createBulkTransfer(MemorySession session, byte endpointAddress, MemorySegment data, int timeout) {
-        var transfer = session.allocate(usbdevfs_bulktransfer.$LAYOUT());
-        usbdevfs_bulktransfer.ep$set(transfer, 255 & endpointAddress);
-        usbdevfs_bulktransfer.len$set(transfer, (int) data.byteSize());
-        usbdevfs_bulktransfer.data$set(transfer, data.address());
-        usbdevfs_bulktransfer.timeout$set(transfer, timeout);
+    @Override
+    public byte[] controlTransferIn(USBControlTransfer setup, int length) {
+        try (var arena = Arena.openConfined()) {
+            var transfer = createSyncCtrlTransfer(arena, USBDirection.IN, setup, length);
+
+            synchronized (transfer) {
+                submitTransfer(USBDirection.IN, 0, transfer);
+                waitForTransfer(transfer, 0, USBDirection.IN, 0);
+            }
+
+            return transfer.data.asSlice(8, transfer.resultSize).toArray(JAVA_BYTE);
+        }
+    }
+
+    /**
+     * Create transfer object for synchronous control request.
+     *
+     * @param arena      arena for allocating memory
+     * @param direction  direction
+     * @param setup      setup data
+     * @param dataLength data length (in addition to setup data)
+     * @return transfer object
+     */
+    private LinuxTransfer createSyncCtrlTransfer(Arena arena, USBDirection direction, USBControlTransfer setup,
+                                                 int dataLength) {
+        var bmRequest =
+                (direction == USBDirection.IN ? 0x80 : 0) | (setup.requestType().ordinal() << 5) | setup.recipient().ordinal();
+        var buffer = arena.allocate(8 + dataLength, 8);
+        var setupPacket = new SetupPacket(buffer);
+        setupPacket.setRequestType(bmRequest);
+        setupPacket.setRequest(setup.request());
+        setupPacket.setValue(setup.value());
+        setupPacket.setIndex(setup.index());
+        setupPacket.setLength(dataLength);
+
+        var transfer = new LinuxTransfer();
+        transfer.data = buffer;
+        transfer.dataSize = (int) buffer.byteSize();
+        transfer.resultSize = -1;
+        transfer.completion = USBDeviceImpl::onSyncTransferCompleted;
+
         return transfer;
     }
 
     @Override
     public void transferOut(int endpointNumber, byte[] data, int timeout) {
-        var endpointAddress = getEndpointAddress(endpointNumber, USBDirection.OUT,
-                USBTransferType.BULK, USBTransferType.INTERRUPT);
-
-        try (var session = MemorySession.openConfined()) {
-            var buffer = session.allocate(data.length);
+        try (var arena = Arena.openConfined()) {
+            var buffer = arena.allocate(data.length);
             buffer.copyFrom(MemorySegment.ofArray(data));
-            var transfer = createBulkTransfer(session, endpointAddress, buffer, timeout);
+            var transfer = createSyncTransfer(buffer);
 
-            int res = ioctl.ioctl(fd, USBDevFS.BULK, transfer.address());
-            if (res < 0) {
-                int err = IO.getErrno();
-                if (err == errno.ETIMEDOUT())
-                    throw new USBTimeoutException("Transfer out aborted due to timeout");
-                // TODO: remove below code if 'errno' is no longer overwritten by JVM
-                if (err == 2)
-                    throw new USBTimeoutException("Transfer in aborted due to timeout");
-                throwException(err, "USB OUT transfer on endpoint %d failed", endpointNumber);
+            synchronized (transfer) {
+                submitTransfer(USBDirection.OUT, endpointNumber, transfer);
+                waitForTransfer(transfer, timeout, USBDirection.OUT, endpointNumber);
             }
         }
     }
 
     @Override
     public byte[] transferIn(int endpointNumber, int timeout) {
-        var endpoint = getEndpoint(endpointNumber, USBDirection.IN,
-                USBTransferType.BULK, USBTransferType.INTERRUPT);
+        var endpoint = getEndpoint(USBDirection.IN, endpointNumber, USBTransferType.BULK, USBTransferType.INTERRUPT);
 
-        try (var session = MemorySession.openConfined()) {
-            var buffer = session.allocate(endpoint.packetSize());
+        try (var arena = Arena.openConfined()) {
+            var buffer = arena.allocate(endpoint.packetSize());
+            var transfer = createSyncTransfer(buffer);
 
-            var transfer = createBulkTransfer(session, endpoint.endpointAddress(), buffer, timeout);
-
-            int res = ioctl.ioctl(fd, USBDevFS.BULK, transfer.address());
-            if (res < 0) {
-                int err = IO.getErrno();
-                if (err == errno.ETIMEDOUT())
-                    throw new USBTimeoutException("Transfer in aborted due to timeout");
-                // TODO: remove below code if 'errno' is no longer overwritten by JVM
-                if (err == 2)
-                    throw new USBTimeoutException("Transfer in aborted due to timeout");
-                throwException(err, "USB IN transfer on endpoint %d failed", endpointNumber);
+            synchronized (transfer) {
+                submitTransfer(USBDirection.IN, endpointNumber, transfer);
+                waitForTransfer(transfer, timeout, USBDirection.IN, endpointNumber);
             }
 
-            return buffer.asSlice(0, res).toArray(JAVA_BYTE);
+            return buffer.asSlice(0, transfer.resultSize).toArray(JAVA_BYTE);
+        }
+    }
+
+    private LinuxTransfer createSyncTransfer(MemorySegment data) {
+        var transfer = new LinuxTransfer();
+        transfer.data = data;
+        transfer.dataSize = (int) data.byteSize();
+        transfer.resultSize = -1;
+        transfer.completion = USBDeviceImpl::onSyncTransferCompleted;
+        return transfer;
+    }
+
+    synchronized void submitTransfer(USBDirection direction, int endpointNumber, LinuxTransfer transfer) {
+        if (endpointNumber != 0) {
+            var endpoint = getEndpoint(direction, endpointNumber, USBTransferType.BULK, USBTransferType.INTERRUPT);
+            asyncTask.submitTransfer(this, endpoint.endpointAddress(), endpoint.transferType(), transfer);
+        } else {
+            asyncTask.submitTransfer(this, 0, USBTransferType.CONTROL, transfer);
         }
     }
 
     @Override
-    public void clearHalt(USBDirection direction, int endpointNumber) {
-        var endpointAddress = getEndpointAddress(endpointNumber, direction,
-                USBTransferType.BULK, USBTransferType.INTERRUPT);
+    protected Transfer createTransfer() {
+        return new LinuxTransfer();
+    }
 
-        try (var session = MemorySession.openConfined()) {
-            var endpointAddrSegment = session.allocate(JAVA_INT, endpointAddress & 0xff);
-            int res = ioctl.ioctl(fd, USBDevFS.CLEAR_HALT, endpointAddrSegment.address());
+    @Override
+    protected void throwOSException(int errorCode, String message, Object... args) {
+        throwException(errorCode, message, args);
+    }
+
+    @Override
+    public void clearHalt(USBDirection direction, int endpointNumber) {
+        var endpoint = getEndpoint(direction, endpointNumber, USBTransferType.BULK, USBTransferType.INTERRUPT);
+
+        try (var arena = Arena.openConfined()) {
+            var endpointAddrSegment = arena.allocate(JAVA_INT, endpoint.endpointAddress() & 0xff);
+            var errnoState = arena.allocate(Linux.ERRNO_STATE.layout());
+            int res = IO.ioctl(fd, USBDevFS.CLEAR_HALT, endpointAddrSegment, errnoState);
             if (res < 0)
-                throwLastError("Clearing halt failed");
+                throwLastError(errnoState, "Clearing halt failed");
         }
     }
 
+    @Override
+    public synchronized void abortTransfers(USBDirection direction, int endpointNumber) {
+        var endpoint = getEndpoint(direction, endpointNumber, USBTransferType.BULK, USBTransferType.INTERRUPT);
+
+        asyncTask.abortTransfers(this, endpoint.endpointAddress());
+    }
+
+    @Override
+    public InputStream openInputStream(int endpointNumber, int bufferSize) {
+        // check that endpoint number is valid
+        getEndpoint(USBDirection.IN, endpointNumber, USBTransferType.BULK, null);
+
+        return new LinuxEndpointInputStream(this, endpointNumber, bufferSize);
+    }
+
+    @Override
+    public OutputStream openOutputStream(int endpointNumber, int bufferSize) {
+        // check that endpoint number is valid
+        getEndpoint(USBDirection.OUT, endpointNumber, USBTransferType.BULK, null);
+
+        return new LinuxEndpointOutputStream(this, endpointNumber, bufferSize);
+    }
 }
