@@ -8,6 +8,7 @@
 package net.codecrete.usb.macos;
 
 import net.codecrete.usb.USBDevice;
+import net.codecrete.usb.common.ScopeCleanup;
 import net.codecrete.usb.common.USBDeviceRegistry;
 import net.codecrete.usb.macos.gen.corefoundation.CoreFoundation;
 import net.codecrete.usb.macos.gen.iokit.IOKit;
@@ -19,7 +20,7 @@ import java.lang.invoke.MethodType;
 import java.util.ArrayList;
 import java.util.function.Consumer;
 
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 import static java.lang.foreign.ValueLayout.*;
 import static net.codecrete.usb.macos.MacosUSBException.throwException;
 
@@ -27,6 +28,26 @@ import static net.codecrete.usb.macos.MacosUSBException.throwException;
  * MacOS implementation of USB device registry.
  */
 public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
+
+    private final SegmentAllocator GLOBAL_ALLOCATOR = SegmentAllocator.nativeAllocator(SegmentScope.global());
+
+    private final MemorySegment KEY_ID_VENDOR = CoreFoundationHelper.createCFStringRef("idVendor", GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_ID_PRODUCT = CoreFoundationHelper.createCFStringRef("idProduct", GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_VENDOR = CoreFoundationHelper.createCFStringRef("kUSBVendorString",
+            GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_PRODUCT = CoreFoundationHelper.createCFStringRef("kUSBProductString",
+            GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_SERIAL_NUM = CoreFoundationHelper.createCFStringRef("kUSBSerialNumberString",
+            GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_DEVICE_CLASS = CoreFoundationHelper.createCFStringRef("bDeviceClass",
+            GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_DEVICE_SUBCLASS = CoreFoundationHelper.createCFStringRef("bDeviceSubClass",
+            GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_DEVICE_PROTOCOL = CoreFoundationHelper.createCFStringRef("bDeviceProtocol",
+            GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_USB_BCD = CoreFoundationHelper.createCFStringRef("bcdUSB", GLOBAL_ALLOCATOR);
+    private final MemorySegment KEY_DEVICE_BCD = CoreFoundationHelper.createCFStringRef("bcdDevice", GLOBAL_ALLOCATOR);
+
 
     /**
      * Monitors the USB devices.
@@ -38,7 +59,7 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
     protected void monitorDevices() {
 
         // as the method runs forever, there is no need to clean up one-time allocations
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
 
             try {
 
@@ -50,8 +71,8 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
 
                 // setup notification for connected devices
                 var onDeviceConnectedMH = MethodHandles.lookup().findVirtual(MacosUSBDeviceRegistry.class,
-                        "onDevicesConnected", MethodType.methodType(void.class, MemoryAddress.class, int.class));
-                int deviceConnectedIter = setupNotification(session, notifyPort, IOKit.kIOFirstMatchNotification(),
+                        "onDevicesConnected", MethodType.methodType(void.class, MemorySegment.class, int.class));
+                int deviceConnectedIter = setupNotification(arena, notifyPort, IOKit.kIOFirstMatchNotification(),
                         onDeviceConnectedMH);
 
                 // iterate current devices in order to arm the notifications (and build initial device list)
@@ -61,8 +82,8 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
 
                 // setup notification for disconnected devices
                 var onDeviceDisconnectedMH = MethodHandles.lookup().findVirtual(MacosUSBDeviceRegistry.class,
-                        "onDevicesDisconnected", MethodType.methodType(void.class, MemoryAddress.class, int.class));
-                int deviceDisconnectedIter = setupNotification(session, notifyPort, IOKit.kIOTerminatedNotification(),
+                        "onDevicesDisconnected", MethodType.methodType(void.class, MemorySegment.class, int.class));
+                int deviceDisconnectedIter = setupNotification(arena, notifyPort, IOKit.kIOTerminatedNotification(),
                         onDeviceDisconnectedMH);
 
                 // iterate current devices in order to arm the notifications
@@ -86,28 +107,30 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
      */
     private void iterateDevices(int iterator, IOKitDeviceConsumer consumer) {
 
-        int svc;
-        while ((svc = IOKit.IOIteratorNext(iterator)) != 0) {
-            try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
+            var entryIdHolder = arena.allocate(JAVA_LONG);
 
-                final int service = svc;
-                session.addCloseAction(() -> IOKit.IOObjectRelease(service));
+            int svc;
+            while ((svc = IOKit.IOIteratorNext(iterator)) != 0) {
+                try (var cleanup = new ScopeCleanup()) {
 
-                var device = IoKitHelper.getInterface(service, IoKitHelper.kIOUSBDeviceUserClientTypeID,
-                        IoKitHelper.kIOUSBDeviceInterfaceID100);
+                    final int service = svc;
+                    cleanup.add(() -> IOKit.IOObjectRelease(service));
 
-                if (device != null)
-                    session.addCloseAction(() -> IoKitUSB.Release(device));
+                    var device = IoKitHelper.getInterface(service, IoKitHelper.kIOUSBDeviceUserClientTypeID,
+                            IoKitHelper.kIOUSBDeviceInterfaceID100);
+                    if (device != null)
+                        cleanup.add(() -> IoKitUSB.Release(device));
 
-                // get entry ID (as unique ID)
-                var entryIdHolder = session.allocate(JAVA_LONG);
-                int ret = IOKit.IORegistryEntryGetRegistryEntryID(service, entryIdHolder);
-                if (ret != 0)
-                    throwException(ret, "IORegistryEntryGetRegistryEntryID failed");
-                var entryId = entryIdHolder.get(JAVA_LONG, 0);
+                    // get entry ID (as unique ID)
+                    int ret = IOKit.IORegistryEntryGetRegistryEntryID(service, entryIdHolder);
+                    if (ret != 0)
+                        throwException(ret, "IORegistryEntryGetRegistryEntryID failed");
+                    var entryId = entryIdHolder.get(JAVA_LONG, 0);
 
-                // call consumer to process device
-                consumer.accept(entryId, service, device);
+                    // call consumer to process device
+                    consumer.accept(entryId, service, device);
+                }
             }
         }
     }
@@ -138,55 +161,58 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
         });
     }
 
-    private USBDevice createDevice(Long entryID, int service, MemoryAddress deviceIntf, VidPid info) {
+    private USBDevice createDevice(Long entryID, int service, MemorySegment deviceIntf, VidPid info) {
 
         if (deviceIntf == null)
             return null;
 
-        Integer vendorId = IoKitHelper.getPropertyInt(service, "idVendor");
-        Integer productId = IoKitHelper.getPropertyInt(service, "idProduct");
-        if (vendorId == null || productId == null)
-            return null;
+        try (var arena = Arena.openConfined()) {
 
-        info.vid = vendorId;
-        info.pid = productId;
+            Integer vendorId = IoKitHelper.getPropertyInt(service, KEY_ID_VENDOR, arena);
+            Integer productId = IoKitHelper.getPropertyInt(service, KEY_ID_PRODUCT, arena);
+            if (vendorId == null || productId == null)
+                return null;
 
-        var device = new MacosUSBDevice(deviceIntf, entryID, vendorId, productId);
+            info.vid = vendorId;
+            info.pid = productId;
 
-        String manufacturer = IoKitHelper.getPropertyString(service, "kUSBVendorString");
-        String product = IoKitHelper.getPropertyString(service, "kUSBProductString");
-        String serial = IoKitHelper.getPropertyString(service, "kUSBSerialNumberString");
+            var device = new MacosUSBDevice(deviceIntf, entryID, vendorId, productId);
 
-        device.setProductStrings(manufacturer, product, serial);
+            String manufacturer = IoKitHelper.getPropertyString(service, KEY_VENDOR, arena);
+            String product = IoKitHelper.getPropertyString(service, KEY_PRODUCT, arena);
+            String serial = IoKitHelper.getPropertyString(service, KEY_SERIAL_NUM, arena);
 
-        Integer classCode = IoKitHelper.getPropertyInt(service, "bDeviceClass");
-        Integer subclassCode = IoKitHelper.getPropertyInt(service, "bDeviceSubClass");
-        Integer protocolCode = IoKitHelper.getPropertyInt(service, "bDeviceProtocol");
+            device.setProductStrings(manufacturer, product, serial);
 
-        device.setClassCodes(classCode != null ? classCode : 0, subclassCode != null ? subclassCode : 0,
-                protocolCode != null ? protocolCode : 0);
+            Integer classCode = IoKitHelper.getPropertyInt(service, KEY_DEVICE_CLASS, arena);
+            Integer subclassCode = IoKitHelper.getPropertyInt(service, KEY_DEVICE_SUBCLASS, arena);
+            Integer protocolCode = IoKitHelper.getPropertyInt(service, KEY_DEVICE_PROTOCOL, arena);
 
-        Integer usbVersion = IoKitHelper.getPropertyInt(service, "bcdUSB");
-        Integer deviceVersion = IoKitHelper.getPropertyInt(service, "bcdDevice");
-        //noinspection ConstantConditions
-        device.setVersions(usbVersion, deviceVersion != null ? deviceVersion : 0);
+            device.setClassCodes(classCode != null ? classCode : 0, subclassCode != null ? subclassCode : 0,
+                    protocolCode != null ? protocolCode : 0);
 
-        return device;
+            Integer usbVersion = IoKitHelper.getPropertyInt(service, KEY_USB_BCD, arena);
+            Integer deviceVersion = IoKitHelper.getPropertyInt(service, KEY_DEVICE_BCD, arena);
+            //noinspection DataFlowIssue
+            device.setVersions(usbVersion, deviceVersion != null ? deviceVersion : 0);
+
+            return device;
+        }
     }
 
-    private int setupNotification(MemorySession session, MemoryAddress notifyPort, MemorySegment notificationType,
+    private int setupNotification(Arena arena, MemorySegment notifyPort, MemorySegment notificationType,
                                   MethodHandle callback) {
 
         // new matching dictionary for (dis)connected device notifications
-        MemoryAddress matchingDict = IOKit.IOServiceMatching(IOKit.kIOUSBDeviceClassName());
+        var matchingDict = IOKit.IOServiceMatching(IOKit.kIOUSBDeviceClassName());
 
         // create callback stub
         var onDeviceCallbackStub = Linker.nativeLinker().upcallStub(callback.bindTo(this),
-                FunctionDescriptor.ofVoid(ADDRESS, JAVA_INT), session);
+                FunctionDescriptor.ofVoid(ADDRESS, JAVA_INT), SegmentScope.global());
 
         // Set up a notification to be called when a device is first matched / terminated by I/O Kit.
         // This method consumes the matchingDict reference.
-        var deviceIterHolder = session.allocate(JAVA_INT);
+        var deviceIterHolder = arena.allocate(JAVA_INT);
         int ret = IOKit.IOServiceAddMatchingNotification(notifyPort, notificationType, matchingDict,
                 onDeviceCallbackStub, NULL, deviceIterHolder);
         if (ret != 0)
@@ -204,7 +230,7 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
      * @param ignoredRefCon ignored parameter
      * @param iterator      device iterator
      */
-    private void onDevicesConnected(MemoryAddress ignoredRefCon, int iterator) {
+    private void onDevicesConnected(MemorySegment ignoredRefCon, int iterator) {
 
         // process device iterator for connected devices
         iterateDevices(iterator, this::addDevice);
@@ -219,7 +245,8 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
      * @param ignoredRefCon ignored parameter
      * @param iterator      device iterator
      */
-    private void onDevicesDisconnected(MemoryAddress ignoredRefCon, int iterator) {
+    private void onDevicesDisconnected(@SuppressWarnings("SameParameterValue") MemorySegment ignoredRefCon,
+                                       int iterator) {
 
         // process device iterator for disconnected devices
         iterateDevices(iterator, (entryId, service, deviceIntf) -> {
@@ -240,7 +267,7 @@ public class MacosUSBDeviceRegistry extends USBDeviceRegistry {
 
     @FunctionalInterface
     interface IOKitDeviceConsumer {
-        void accept(long entryId, int service, MemoryAddress deviceIntf);
+        void accept(long entryId, int service, MemorySegment deviceIntf);
     }
 
     static class VidPid {
