@@ -9,10 +9,10 @@ package net.codecrete.usb.macos;
 
 import net.codecrete.usb.macos.gen.corefoundation.CoreFoundation;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 
 /**
  * Memory layouts and helpers for CFUUID.
@@ -21,13 +21,14 @@ public class UUID {
 
     /**
      * Creates a CFUUID struct from a byte array.
+     *
      * @param bytes UUID as 16 bytes
      * @return the CFUUID
      */
-    public static MemoryAddress CreateCFUUID(byte[] bytes) {
-        try (var session = MemorySession.openConfined()) {
-            var uuidBytes = session.allocate(16);
-            uuidBytes.asByteBuffer().put(bytes);
+    public static MemorySegment CreateCFUUID(byte[] bytes) {
+        try (var arena = Arena.openConfined()) {
+            var uuidBytes = arena.allocate(16);
+            uuidBytes.copyFrom(MemorySegment.ofArray(bytes));
             return CoreFoundation.CFUUIDCreateFromUUIDBytes(NULL, uuidBytes);
         } catch (Throwable t) {
             throw new RuntimeException(t);
